Turned off Etags.

--- a/src/.htaccess
+++ b/src/.htaccess
@@ -2,15 +2,18 @@
 # http://wiki.office.aol.com/wiki/Web_Caching
 Header set Cache-Control "max-age=60, public"
 Header set Edge-Control "downstream-ttl=60"
-ExpiresDefault "access plus 1 minute" 
+ExpiresDefault "access plus 1 minute"
 
-# GZIP 
+# GZIP
 # http://html5boilerplate.com/docs/htaccess/
 <IfModule mod_deflate.c>
-  AddOutputFilterByType DEFLATE text/html text/plain text/css text/javascript application/javascript application/json 
+  AddOutputFilterByType DEFLATE text/html text/plain text/css text/javascript application/javascript application/json
   AddOutputFilterByType DEFLATE text/xml application/xml text/x-component
 
   <FilesMatch "\.(ttf|otf|eot|svg)$" >
     SetOutputFilter DEFLATE
   </FilesMatch>
 </IfModule>
+
+# Etags
+FileETag None
