Added UTF-8 charset to .htaccess.

--- a/src/.htaccess
+++ b/src/.htaccess
@@ -17,3 +17,11 @@ ExpiresDefault "access plus 1 minute"
 
 # Etags
 FileETag None
+
+# Charset
+AddDefaultCharset UTF-8
+AddCharset UTF-8 .php
+AddCharset UTF-8 .html
+AddCharset UTF-8 .xml
+AddCharset UTF-8 .js
+AddCharset UTF-8 .css
